# ruw-warehouse-overview

./: README.md  index.html  main.py  pyproject.toml  quality.sh
.github/workflows/: update.yml
assets/: housestyle.txt  stats.sql
data/: stats.json
templates/: index.j2
