[project]
name = "ruw-database-app"
version = "0.1.0"
description = "RUW database statistics dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.0a1",
]
